[package]
name = "source-map"
version = "0.10.0"
authors = ["Ben <kaleidawave@gmail.com>"]
edition = "2018"
description = "Utilities for building source maps (v3) for a compiler"
license = "MIT"
keywords = ["source-map"]
categories = ["web-programming"]
repository = "https://github.com/kaleidawave/source-map"

[dependencies]
lazy_static = "1.4.0"
lsp-types = { version = "0.91.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
base64 = { version = "0.13.0", optional = true }
self-rust-tokenize = { version = "0.2.0", optional = true }
proc-macro2 = { version = "1", optional = true }

[features]
self-rust-tokenize = ["dep:self-rust-tokenize", "dep:proc-macro2"]
lsp-types-morphisms = ["dep:lsp-types"]
span-serialize = ["dep:serde"]
inline-source-map = ["dep:base64"]
# global-sources-map = ["dep:lazy_static"]
