[package]
name = "source-map"
version = "0.14.5"
authors = ["Ben <kaleidawave@gmail.com>"]
edition = "2018"
description = "Utilities for building source maps (v3) for a compiler"
license = "MIT"
keywords = ["source-map"]
categories = ["web-programming"]
repository = "https://github.com/kaleidawave/source-map"

[dependencies]
lsp-types = { version = "0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
base64 = { version = "0.21", optional = true }
codespan-reporting = { version = "0.11", optional = true }
self-rust-tokenize = { version = "0.3", optional = true }

[features]
default = ["global-source-filesystem"]
self-rust-tokenize = ["dep:self-rust-tokenize"]
lsp-types-morphisms = ["dep:lsp-types"]
serde-serialize = ["dep:serde"]
inline-source-map = ["dep:base64"]
codespan-reporting = ["dep:codespan-reporting"]
global-source-filesystem = []
